# gpu-forward-progress-TLAPlus

./: .gitignore  .gitmodules  Earthfile  MCDinningPhi.tla  README.md  addition.comp  compare.txt  compare1.txt  dot_parser.py  fix_graph.py  path_subgraph.dot  path_subgraph_old.dot  producer_consumer.comp
Homunculus/: Cargo.toml  README.md
Homunculus/compiler/: Cargo.toml
Homunculus/compiler/src/codegen/: builder.rs  cfg.rs  common.rs  constant.rs  context.rs  mod.rs
Homunculus/compiler/src/compiler/ast/: ast.rs
Homunculus/compiler/src/compiler/parse/: event.rs  lexer.rs  marker.rs  mod.rs  parser.rs  sink.rs  symbol_table.rs  syntax.rs
Homunculus/compiler/src/compiler/parse/grammar/: grammar.rs  statement.rs
Homunculus/fuzzing/: Cargo.toml
Homunculus/fuzzing/src/: lib.rs  mutation.rs  parse.rs
Homunculus/src/: main.rs
Homunculus/src/codegen/: builder.rs  cfg.rs  common.rs  constant.rs  context.rs  mod.rs
Homunculus/src/codegen/back/: write.rs
Homunculus/src/compiler/ast/: ast.rs  mod.rs
Homunculus/src/compiler/parse/: parser.rs  parser_error.rs  sink.rs  source.rs  symbol_table.rs  syntax.rs
Homunculus/src/compiler/parse/grammar/: mod.rs  statement.rs
Homunculus/syntax_node_derive/: Cargo.toml
Homunculus/syntax_node_derive/src/: lib.rs
example_shader_program/: comp.spv  dynamic_loop.comp  for_loop.comp  litmus_test_0_2_2.comp  litmus_test_2_2.comp  litmus_test_5_2_2.comp  loop_peeling.comp  multi_subgroup.comp  multi_way_branch.comp  nested_branch.comp  nested_loop.comp  producer_consumer.comp  producer_consumer_spinlock.comp  (+5 more)
(+52 files in other folders)
